--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
+<p-dialog header="Login" [(visible)]="display" modal="true">
+  <span>alice/password</span>
+  <br/>
+  <span>bob/password</span>
+
+  <form [formGroup]="loginForm" (ngSubmit)="logIn()">
+    <label>User:</label>
+    <input pInputText type="text" formControlName="user" />
+    <label>Password:</label>
+    <input pInputText type="password" formControlName="password" />
+    <div>
+      <p-button type="submit" label="Log in" [disabled]="!loginForm.valid"></p-button>
+    </div>
+  </form>
+</p-dialog>
+
 <form [formGroup]="messageForm" (ngSubmit)="onSubmit()">
   <h3>Message:</h3>
   <input pInputText type="text" formControlName="message" />
