Display received messages chat
- Added a subject to theg MessageService to push received messages
- Subscribed to new messages from OnInit
- Displayed in list in UI the messages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,3 +21,11 @@
   <input pInputText type="text" formControlName="message" />
   <p-button type="submit" label="Send" [disabled]="!messageForm.valid"></p-button>
 </form>
+
+<div>
+    <ul>
+      <li *ngFor="let msg of messages">
+        <b>{{ msg.user }}:</b> {{ msg.content }}
+      </li>
+    </ul>
+</div>
